# hs_autobattler

./: .copilotignore  .gitignore  README.md  ablation_runner.sh  build_and_test.py  hs_env.py  ideas.md  profile.txt  pyproject.toml  pyrightconfig.json  run_simulation.py  run_vram_test.sh  setup_and_train.sh  test.py  train.py
.agent_context/: context.md
.github/: copilot-instructions.md
cpp/: CMakeLists.txt  WALKTHROUGH.md  build.bat
data/: cards.json
engine/: attached_effects.py  combat.py  configs.py  effects.py  entities.py  enums.py  event_system.py  game.py  pool.py  spells.py  tavern.py
legacy/: __init__.py  kaggle_submit.py  test_trans_integration.py
scripts/: bc_collect.py  bc_train.py  callbacks.py  categorical_critic.py  evaluate_pvp.py  evolve_bot.py  generate_cpp_effects.py  kaggle_submit.py  kaggle_submit_es.py  kaggle_submit_ppo.py  model.py  scrape_bg_data.py  test.py  train.py  train_ppo.py  train_transformer.py  trans.py  visualize_attention.py  vram_test.py
test/: test_attached_effects.py  test_combat.py  test_golden_logic.py  test_tavern.py
tests/: _bench_cpp_only.py  _bench_parse.py  _bench_realistic.py  bench_cpp_vs_python.py  conftest.py  run_simulation.py  test_all_spells.py  test_card_def.py  test_combat.py  test_coverage_gaps.py  test_cpp_bridge.py  test_cpp_combat.py  test_cpp_smoke.py  test_effect_types.py  test_engine_core.py  test_entities.py  test_es_bot.py  test_event_system.py  test_game_lifecycle.py  test_golden_logic.py  test_integration.py  test_ml_components.py  test_new_cards.py  test_new_mechanics.py  test_new_t3t4_cards.py  test_pool.py  test_rl_env.py  (+3 more)
(+76 files in other folders)
