[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hearthstone"
version = "0.1.0"
description = "RL Environment and Simulator for HS Battlegrounds"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "gymnasium",
    "torch",
    "stable-baselines3",
    "sb3-contrib",
    "wandb",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black", # Formatter
    "ruff", # Linter
    "mypy", # type check
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E, W - style error
# F - fatal error
# I - import sort
select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true